added the ability to get a user by id
